fixed overflow on text item animation

--- a/public/css/inflected-main.css
+++ b/public/css/inflected-main.css
@@ -324,7 +324,8 @@ a {
   @media (min-width: 480px) {
     .item--text .item-container {
       width: 40vw;
-      font-size: 2vw; }
+      font-size: 2vw;
+      overflow: hidden; }
       .item--text .item-container p {
         -webkit-transform: translateZ(0);
                 transform: translateZ(0); } }
